# Omoospace

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  versions.json
.github/workflows/: publish.yml  push-main.yml  upload-assets.yml
0.1/: 404.html  index.html  sitemap.xml
0.1.6/: 404.html  index.html  sitemap.xml
0.1.6/artists/: index.html
0.1.6/developers/: index.html
0.1.6/omoospace/: index.html
0.1.6/roadmap/: index.html
0.1.6/search/: search_index.json
0.1.x/: 404.html  index.html  objects.inv  sitemap.xml
0.1.x/artists/: index.html
0.1.x/contribution/: index.html
0.1.x/contributors/: index.html
0.1.x/develop_plugin/: index.html
0.1.x/developers/: index.html
0.1.x/omoospace/: index.html
0.1.x/omoospace_rules/: index.html
0.1.x/roadmap/: index.html
0.1.x/search/: search_index.json
0.1.x/stylesheets/: extra.css
0.1.x/why_omoospace/: index.html
0.1/artists/: index.html
0.1/developers/: index.html
0.1/omoospace/: index.html
0.1/roadmap/: index.html
0.1/search/: search_index.json
0.2.x/: 404.html  index.html  objects.inv  sitemap.xml
0.2.x/contribution/: index.html
0.2.x/develop/: index.html
0.2.x/develop-plugin/: index.html
0.2.x/how-to-add-suffixes/: index.html
0.2.x/how-to-backup/: index.html
0.2.x/how-to-setup-folders/: index.html
0.2.x/principles/: index.html
0.2.x/search/: search_index.json
0.2.x/terms/: index.html
0.2.x/why/: index.html
0.2.x/why-omoospace/: index.html
0.2.x/yml/: index.html
apis/directory/: index.html
apis/omoospace/: index.html
apis/package/: index.html
artists/: index.html
assets/: Structure.html
clis/: index.html
developers/: index.html
docs/: artists.md  contribution.md  contributors.md  develop-plugin.md  develop.md  developers.md  how-to-add-suffixes.md  index.md  omoospace-rules.md  omoospace.md  omoospace_rules.md  principles.md  roadmap.md  terms.md  why-omoospace.md  why.md  yml.md
omoospace/: __init__.py  commands.py  common.py  directory.py  exceptions.py  graph.py  index.html  omoospace.py  package.py  setting.py  subspace.py  tree.py  types.py  ui.py  utils.py  validators.py
roadmap/: index.html
search/: search_index.json
tests/: conftest.py  helper.py  profile.en.yaml  profile.zh.yaml  test_io.py  test_omoospace.py  test_package.py  test_profile.py  test_subspace.py  test_utils.py  test_validators.py
(+103 files in other folders)
