[tool.poetry]
name = "omoospace"
version = "0.1.6"
description = ""
authors = ["manan <icrdr2010@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ruamel-yaml = "^0.17.35"
pypinyin = "^0.49.0"
nutree = "^0.5.1"

[tool.poetry.scripts]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
pytest = "^7.4.2"
pytest-dependency = "^0.5.1"
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.6"
mkdocstrings = { extras = ["python"], version = "^0.23.0" }
mkdocs-click = "^0.8.1"
autopep8 = "^2.0.4"
pytest-cov = "^4.1.0"
mike = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
